--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
     right: 0;
     top: 0;
   }
+}
   .topnav.responsive a {
     float: none;
     display: block;
@@ -57,7 +58,7 @@ body{
 }
 
 .text-block {
-  position:relative;
+  position:absolute;
   text-align: center;
   bottom: 200px;
   right: 540px;
