--- a/synopsis.css
+++ b/synopsis.css
@@ -15,7 +15,8 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 500px;
+  height: 50%;
   position: relative;
   margin: auto;
 }
@@ -102,6 +103,6 @@ img {vertical-align: middle;}
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 100px) {
   .prev, .next,.text {font-size: 11px}
 }
