--- a/production.css
+++ b/production.css
@@ -12,7 +12,24 @@ h1{
   height: 20%;
   width:30%;
 }
+.direct{
+  text-align: center;
+  font-size: 30px;
+  margin-left: 300px;
+  background-color: #FFFFB5;
+  color: black;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 .friends{
   margin-right: 0;
   width: 50%;
+}
+.assist{
+  font-size: 28px;
+  text-align: center;
+  background-color: #FFFFB5;
+  color: black;
+  padding-left: 20px;
+  padding-right: 20px;
 }
